--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
   <div id="key"></div>
   <div id="source">
-    <h6>Source: <a href="https://github.com/hmrc/eat-out-to-help-out-establishments/blob/master/data/participating-establishments/restaurants.csv" target="_blank">Eat out to Help out restaurant list (as at 3rd August)</a></h6>
+    <h6>Sources: <a href="https://github.com/hmrc/eat-out-to-help-out-establishments/blob/master/data/participating-establishments/restaurants.csv" target="_blank">Eat out to Help out restaurant list (as at 3rd August)</a>, <a href="https://github.com/hithomasmorelli/eotho-map/chain-restaurants/SOURCING.md">various chain restaurant sources</a></h6>
   </div>
 
 
