--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
       margin-top:0px;
     }
 
+    #source {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
     @media (min-width: 589px) {
       #map {
         height: 600px;
