--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
 
   <div id="key"></div>
   <div id="source">
-    <h6>Sources: <a href="https://github.com/hmrc/eat-out-to-help-out-establishments/blob/f88064e90b9b597ac7aaaab7fe4338102de345cb/data/participating-establishments/restaurants.csv" target="_blank">Eat out to Help out restaurant list (as at 5th August)</a>, <a href="https://github.com/hithomasmorelli/eotho-map/chain-restaurants/SOURCING.md">various chain restaurant sources</a></h6>
+    <!--<h6><Sources: ><a href="https://github.com/hmrc/eat-out-to-help-out-establishments/blob/f88064e90b9b597ac7aaaab7fe4338102de345cb/data/participating-establishments/restaurants.csv" target="_blank">Eat out to Help out restaurant list (as at 5th August)</a>, <a href="https://github.com/hithomasmorelli/eotho-map/chain-restaurants/SOURCING.md">various chain restaurant sources</a></h6>-->
+    <h6><a href="https://github.com/hithomasmorelli/eotho-map/source-information/SOURCING.md">View data sources</a></h6>
   </div>
 
 
